versioned_docs/version-2.8.0/tokens/nfc/index.md
# NFC Tags

NFC tags tell the reader and software what action to take. They **do not** contain any games, but instead contain a reference to a game or custom command. This is in the form of a small piece of text stored on the tag.

Tags come in many form factors and standards. The form factor is entirely your preference, but the standard may affect compatibility with Zaparoo and your particular reader hardware.

:::tip
"NTAG215 NFC cards" work with all Zaparoo readers, software features, and community label templates.
:::

## Writing to NFC Tags

The easiest way to write Zaparoo commands to NFC tags is using the [Zaparoo App](https://zaparoo.app), available for both iOS and Android.

:::tip
The Zaparoo App's tag writing functionality is available for free. You can start using it right away!
:::

## Where To Buy

NFC tags are readily available on Amazon, eBay and AliExpress by searching for the standard, form factor and storage size if applicable (e.g. NTAG215 NFC card, NTAG213 NFC sticker). You'll also find them on many local "NFC" and "ID" related stores. At this stage no difference in quality has been noted between suppliers. AliExpress offers NFC tokens in bulk at low prices.

## Supported Tag Types

- [NTAG](./ntag.md)
- [MIFARE Classic](./mifare.md) (supported but not recommended)
